tests/paczka1/fuzzy1/36477168.err
Error in line 2: y9ByrAWd62 S327 43,1
Error in line 3: wY0QIV S327 89,8
Error in line 11: y9ByrAWd62 S694 63,4
Error in line 29: BXqrSt S694 23,1
Error in line 27: wY0QIV S358 69,8
Error in line 37: 2iDrzydpb S358 28,1
Error in line 38: 2iDrzydpb S694 64,7
